--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,30 @@ body {
   
 }
 
+a {
+  text-decoration: none;
+}
+
+/* unvisited link */
+a:link {
+  color: #CD0000;
+}
+
+/* visited link */
+a:visited {
+  color: #CD0000;
+}
+
+/* mouse over link */
+a:hover {
+  color: #ffb7b7;
+}
+
+/* selected link */
+a:active {
+  color: #CD0000;
+}
+
 p {
   font-family: 'Quicksand', sans-serif;
   color: #484e50;
