--- a/style/grid.css
+++ b/style/grid.css
@@ -6,7 +6,9 @@
   grid-gap: 10px;
   background-color: #fff;
   padding: 10px;
+  margin: 0 auto; 
   grid-auto-columns: 1fr;
+  width: 75%;
   margin-top: 60px;
 }
 
@@ -15,9 +17,8 @@
   display: grid;
   grid-template-areas:
     'one two three';
-  grid-gap: 10px;
+  grid-gap: 50px;
   background-color: #fff;
-  padding: 10px;
   grid-auto-columns: 1fr;
   margin-top: 60px;
 }
