--- a/style/style.css
+++ b/style/style.css
@@ -105,3 +105,12 @@ h1 {
   max-width: 100%;
   height: auto;
 }
+
+.title {
+  text-align: center;
+}
+
+.hover:hover {
+  opacity: 0.6;
+  transition: 0.6s;
+}
