--- a/style/style.css
+++ b/style/style.css
@@ -134,14 +134,29 @@ h1 {
 }
 
 
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 699px) and (min-width: 320px) {
   .moto {
     text-align: center;
+    margin-right: 0px;
   }
   .logo-text {
     text-align: center;
+    margin-left: 0px;
   }
   .senior {
     text-align: center;
+    margin-left: 0px;
   }
 }
+
+@media screen and (max-width: 1000px) and (min-width: 601px) {
+  .moto {
+    margin-right: 20px;
+  }
+  .logo-text {
+    margin-left: 20px;
+  }
+  .senior {
+    margin-left: 20px;
+  }
+} 
