--- a/style/style.css
+++ b/style/style.css
@@ -53,6 +53,10 @@ h1 {
   background: #ffb7b7; /* Gecko Browsers */
 }
 
+img {
+  vertical-align: middle;
+}
+
 .arrow {
   margin-left: -10px;
   margin-top: 10px;
@@ -82,31 +86,37 @@ h1 {
 }
 
 .one {
+  position: relative;
   text-align: center;
   grid-area: one;
 }
 
 .two {
+  position: relative;
   text-align: center;
   grid-area: two;
 }
 
 .three {
+  position: relative;
   text-align: center;
   grid-area: three;
 }
 
 .four {
+  position: relative;
   text-align: center;
   grid-area: four;
 }
 
 .five {
+  position: relative;
   text-align: center;
   grid-area: five;
 }
 
 .six {
+  position: relative;
   text-align: center;
   grid-area: six;
 }
@@ -121,9 +131,30 @@ h1 {
   text-align: center;
 }
 
-.hover:hover {
-  opacity: 0.6;
-  transition: 0.6s;
+.hover-panel {
+  position: absolute;
+  bottom: 0px;
+  background-color: #000;
+  width: 100%;
+  height: 0px;
+  overflow: hidden;
+  opacity: 0.5;
+}
+
+.one:hover .hover-panel {
+  position: absolute;
+  background-color: #000;
+  width: 100%;
+  height: 100%;
+  transition: .3s ease;
+}
+
+.two:hover .hover-panel {
+  position: absolute;
+  background-color: #000;
+  width: 100%;
+  height: 100%;
+  transition: .3s ease;
 }
 
 .footer {
