--- a/style/style.css
+++ b/style/style.css
@@ -157,6 +157,38 @@ img {
   transition: .3s ease;
 }
 
+.three:hover .hover-panel {
+  position: absolute;
+  background-color: #000;
+  width: 100%;
+  height: 100%;
+  transition: .3s ease;
+}
+
+.four:hover .hover-panel {
+  position: absolute;
+  background-color: #000;
+  width: 100%;
+  height: 100%;
+  transition: .3s ease;
+}
+
+.five:hover .hover-panel {
+  position: absolute;
+  background-color: #000;
+  width: 100%;
+  height: 100%;
+  transition: .3s ease;
+}
+
+.six:hover .hover-panel {
+  position: absolute;
+  background-color: #000;
+  width: 100%;
+  height: 100%;
+  transition: .3s ease;
+}
+
 .footer {
   padding-top: 40px;
   grid-area: footer;
