--- a/style/style.css
+++ b/style/style.css
@@ -126,69 +126,6 @@ img {
   height: auto;
 }
 
-.title {
-  font-size: 17px;
-  text-align: center;
-}
-
-.hover-panel {
-  position: absolute;
-  bottom: 0px;
-  background-color: #000;
-  width: 100%;
-  height: 0px;
-  overflow: hidden;
-  opacity: 0.5;
-}
-
-.one:hover .hover-panel {
-  position: absolute;
-  background-color: #000;
-  width: 100%;
-  height: 100%;
-  transition: .3s ease;
-}
-
-.two:hover .hover-panel {
-  position: absolute;
-  background-color: #000;
-  width: 100%;
-  height: 100%;
-  transition: .3s ease;
-}
-
-.three:hover .hover-panel {
-  position: absolute;
-  background-color: #000;
-  width: 100%;
-  height: 100%;
-  transition: .3s ease;
-}
-
-.four:hover .hover-panel {
-  position: absolute;
-  background-color: #000;
-  width: 100%;
-  height: 100%;
-  transition: .3s ease;
-}
-
-.five:hover .hover-panel {
-  position: absolute;
-  background-color: #000;
-  width: 100%;
-  height: 100%;
-  transition: .3s ease;
-}
-
-.six:hover .hover-panel {
-  position: absolute;
-  background-color: #000;
-  width: 100%;
-  height: 100%;
-  transition: .3s ease;
-}
-
 .footer {
   padding-top: 40px;
   grid-area: footer;
@@ -198,28 +135,193 @@ img {
 
 
 @media screen and (max-width: 699px) and (min-width: 320px) {
+
   .moto {
     text-align: center;
     margin-right: 0px;
   }
+
   .logo-text {
     text-align: center;
     margin-left: 0px;
   }
+
   .senior {
     text-align: center;
     margin-left: 0px;
+  }
+
+  .title {
+    bottom: 8px;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    font-size: 20px;
+    text-align: center;
+    z-index: 3;
+    color: #fff;
+    margin: 0 auto;
+  }
+
+  .hover-panel {
+    position: absolute;
+    bottom: 0px;
+    background-color: #000;
+    width: 100%;
+    height: 40px;
+    opacity: 0.5;
   }
 }
 
 @media screen and (max-width: 1000px) and (min-width: 601px) {
+
   .moto {
     margin-right: 20px;
   }
+
   .logo-text {
     margin-left: 20px;
   }
+
   .senior {
     margin-left: 20px;
   }
+
+  .title {
+    bottom: 8px;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    font-size: 20px;
+    text-align: center;
+    z-index: 3;
+    color: #fff;
+    margin: 0 auto;
+  }
+
+  .hover-panel {
+    position: absolute;
+    bottom: 0px;
+    background-color: #000;
+    width: 100%;
+    height: 40px;
+    opacity: 0.5;
+  }
 } 
+
+@media screen and (min-width: 1001px) {
+
+  .title {
+    top: 50%;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    font-size: 20px;
+    text-align: center;
+    z-index: 3;
+    visibility: hidden;
+    color: #fff;
+    opacity: 0;
+    margin: 0 auto;
+  }
+  
+  .one:hover .title {
+    transition: .5s ease;
+    visibility: visible;
+    opacity: 1;
+  }
+  
+  .two:hover .title {
+    transition: .5s ease;
+    visibility: visible;
+    opacity: 1;
+  }
+  
+  .three:hover .title {
+    transition: .5s ease;
+    visibility: visible;
+    opacity: 1;
+  }
+  
+  .four:hover .title {
+    transition: .5s ease;
+    visibility: visible;
+    opacity: 1;
+  }
+  
+  .five:hover .title {
+    transition: .5s ease;
+    visibility: visible;
+    opacity: 1;
+  }
+  
+  .six:hover .title {
+    transition: .5s ease;
+    visibility: visible;
+    opacity: 1;
+  }
+
+  .hover-panel {
+    position: absolute;
+    bottom: 0px;
+    background-color: #000;
+    width: 100%;
+    height: 0px;
+    overflow: hidden;
+    opacity: 0.5;
+  }
+  
+  .one:hover .hover-panel {
+    position: absolute;
+    background-color: #000;
+    width: 100%;
+    height: 100%;
+    transition: .3s ease;
+  }
+  
+  .two:hover .hover-panel {
+    position: absolute;
+    background-color: #000;
+    width: 100%;
+    height: 100%;
+    transition: .3s ease;
+  }
+  
+  .three:hover .hover-panel {
+    position: absolute;
+    background-color: #000;
+    width: 100%;
+    height: 100%;
+    transition: .3s ease;
+  }
+  
+  .four:hover .hover-panel {
+    position: absolute;
+    background-color: #000;
+    width: 100%;
+    height: 100%;
+    transition: .3s ease;
+  }
+  
+  .five:hover .hover-panel {
+    position: absolute;
+    background-color: #000;
+    width: 100%;
+    height: 100%;
+    transition: .3s ease;
+  }
+  
+  .six:hover .hover-panel {
+    position: absolute;
+    background-color: #000;
+    width: 100%;
+    height: 100%;
+    transition: .3s ease;
+  }
+}
