--- a/style/style.css
+++ b/style/style.css
@@ -127,7 +127,8 @@ img {
 }
 
 .footer {
-  padding-top: 40px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   grid-area: footer;
   margin: 0 auto;
   text-align: center;
