--- a/pages/jlr/style.css
+++ b/pages/jlr/style.css
@@ -53,17 +53,6 @@ h1 {
   background: #ffb7b7; /* Gecko Browsers */
 }
 
-img {
-  vertical-align: middle;
-}
-
-.arrow {
-  margin-left: -10px;
-  margin-top: 10px;
-  animation-delay: 1s;
-  animation-duration: 3s;
-}
-
 .moto {
   margin-top: 4px;
   text-align: right;
@@ -85,47 +74,6 @@ img {
   color: grey;
 }
 
-.one {
-  position: relative;
-  text-align: center;
-  grid-area: one;
-}
-
-.two {
-  position: relative;
-  text-align: center;
-  grid-area: two;
-}
-
-.three {
-  position: relative;
-  text-align: center;
-  grid-area: three;
-}
-
-.four {
-  position: relative;
-  text-align: center;
-  grid-area: four;
-}
-
-.five {
-  position: relative;
-  text-align: center;
-  grid-area: five;
-}
-
-.six {
-  position: relative;
-  text-align: center;
-  grid-area: six;
-}
-
-.responsive {
-  max-width: 100%;
-  height: auto;
-}
-
 .footer {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -134,6 +82,23 @@ img {
   text-align: center;
 }
 
+.container-two {
+  grid-area: work-holder;
+  margin: 0 auto;
+}
+
+.work-text {
+  font-size: 16px;
+}
+
+.image-holder {
+  text-align: center;
+}
+
+.image {
+  max-width: 100%;
+  max-height: 100%;
+}
 
 @media screen and (max-width: 699px) and (min-width: 320px) {
 
@@ -151,29 +116,6 @@ img {
     text-align: center;
     margin-left: 0px;
   }
-
-  .title {
-    bottom: 8px;
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    font-size: 20px;
-    text-align: center;
-    z-index: 3;
-    color: #fff;
-    margin: 0 auto;
-  }
-
-  .hover-panel {
-    position: absolute;
-    bottom: 0px;
-    background-color: #000;
-    width: 100%;
-    height: 40px;
-    opacity: 0.5;
-  }
 }
 
 @media screen and (max-width: 1000px) and (min-width: 601px) {
@@ -188,141 +130,5 @@ img {
 
   .senior {
     margin-left: 20px;
-  }
-
-  .title {
-    bottom: 8px;
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    font-size: 20px;
-    text-align: center;
-    z-index: 3;
-    color: #fff;
-    margin: 0 auto;
-  }
-
-  .hover-panel {
-    position: absolute;
-    bottom: 0px;
-    background-color: #000;
-    width: 100%;
-    height: 40px;
-    opacity: 0.5;
-  }
-} 
-
-@media screen and (min-width: 1001px) {
-
-  .title {
-    top: 50%;
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    font-size: 20px;
-    text-align: center;
-    z-index: 3;
-    visibility: hidden;
-    color: #fff;
-    opacity: 0;
-    margin: 0 auto;
-  }
-  
-  .one:hover .title {
-    transition: .5s ease;
-    visibility: visible;
-    opacity: 1;
-  }
-  
-  .two:hover .title {
-    transition: .5s ease;
-    visibility: visible;
-    opacity: 1;
-  }
-  
-  .three:hover .title {
-    transition: .5s ease;
-    visibility: visible;
-    opacity: 1;
-  }
-  
-  .four:hover .title {
-    transition: .5s ease;
-    visibility: visible;
-    opacity: 1;
-  }
-  
-  .five:hover .title {
-    transition: .5s ease;
-    visibility: visible;
-    opacity: 1;
-  }
-  
-  .six:hover .title {
-    transition: .5s ease;
-    visibility: visible;
-    opacity: 1;
-  }
-
-  .hover-panel {
-    position: absolute;
-    bottom: 0px;
-    background-color: #000;
-    width: 100%;
-    height: 0px;
-    overflow: hidden;
-    opacity: 0.5;
-  }
-  
-  .one:hover .hover-panel {
-    position: absolute;
-    background-color: #000;
-    width: 100%;
-    height: 100%;
-    transition: .3s ease;
-  }
-  
-  .two:hover .hover-panel {
-    position: absolute;
-    background-color: #000;
-    width: 100%;
-    height: 100%;
-    transition: .3s ease;
-  }
-  
-  .three:hover .hover-panel {
-    position: absolute;
-    background-color: #000;
-    width: 100%;
-    height: 100%;
-    transition: .3s ease;
-  }
-  
-  .four:hover .hover-panel {
-    position: absolute;
-    background-color: #000;
-    width: 100%;
-    height: 100%;
-    transition: .3s ease;
-  }
-  
-  .five:hover .hover-panel {
-    position: absolute;
-    background-color: #000;
-    width: 100%;
-    height: 100%;
-    transition: .3s ease;
-  }
-  
-  .six:hover .hover-panel {
-    position: absolute;
-    background-color: #000;
-    width: 100%;
-    height: 100%;
-    transition: .3s ease;
   }
 }
