--- a/pages/talktalk/tt-style.css
+++ b/pages/talktalk/tt-style.css
@@ -137,6 +137,21 @@ h1 {
     text-align: center;
     margin-left: 0px;
   }
+
+  .work-text {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+  
+  .work-title {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .image {
+    max-width: 100%;
+    max-height: 100%;
+  }
 }
 
 @media screen and (max-width: 1000px) and (min-width: 601px) {
@@ -151,5 +166,20 @@ h1 {
 
   .senior {
     margin-left: 20px;
+  }
+
+  .work-text {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+  
+  .work-title {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .image {
+    max-width: 100%;
+    max-height: 100%;
   }
 }
