--- a/style/style.css
+++ b/style/style.css
@@ -174,6 +174,15 @@ img {
     height: 40px;
     opacity: 0.5;
   }
+
+  .brand {
+    margin-top: 20px;
+    width: 280px;
+  }
+  
+  .image-holder {
+    text-align: center;
+  }
 }
 
 @media screen and (max-width: 1000px) and (min-width: 601px) {
@@ -211,6 +220,11 @@ img {
     width: 100%;
     height: 40px;
     opacity: 0.5;
+  }
+
+  .brand {
+    width: 280px;
+    margin-left: 20px;
   }
 } 
 
@@ -324,5 +338,9 @@ img {
     width: 100%;
     height: 100%;
     transition: .3s ease;
+  }
+
+  .brand {
+    width: 280px;
   }
 }
