--- a/pages/about/about-style.css
+++ b/pages/about/about-style.css
@@ -95,8 +95,10 @@ h1 {
 }
 
 .work-text {
-  font-size: 22px;
-  color: #CD0000;
+  font-family: 'Quicksand', sans-serif;
+  font-size: 16px;
+  margin-left: 12%;
+  margin-right: 12%;
 }
 
 .date {
