--- a/pages/selected/selected-style.css
+++ b/pages/selected/selected-style.css
@@ -98,7 +98,8 @@ h1 {
 .work-text {
   font-family: 'Quicksand', sans-serif;
   font-size: 16px;
-
+  margin-left: 12%;
+  margin-right: 12%;
 }
 
 .work-title {
