--- a/pages/talktalk/tt-style.css
+++ b/pages/talktalk/tt-style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-color: #fff;
+  background-color: #fafafa;
 }
 
 a {
@@ -99,7 +99,8 @@ h1 {
   font-family: 'Quicksand', sans-serif;
   font-size: 16px;
   margin-left: 12%;
-  margin-right: 12%;
+  margin-right:35%;
+  line-height: 1.6;
 }
 
 .work-title {
@@ -112,13 +113,18 @@ h1 {
 }
 
 .image-holder {
-  margin-top: 40px;
   text-align: center;
+  height: 100%;
 }
 
 .image {
-  max-width: 80%;
-  max-height: 80%;
+  vertical-align: middle;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.grey-background {
+  background-color: #f2f5f4;
 }
 
 
