--- a/pages/talktalk/tt-style.css
+++ b/pages/talktalk/tt-style.css
@@ -112,6 +112,23 @@ h1 {
   margin-bottom: 20px;
 }
 
+.work-text-right {
+  font-family: 'Quicksand', sans-serif;
+  font-size: 16px;
+  margin-left: 35%;
+  margin-right: 12%;
+  line-height: 1.6;
+}
+
+.work-title-right {
+  font-family: 'Quicksand', sans-serif;
+  color: #CD0000;
+  font-size: 22px;
+  margin-left: 35%;
+  margin-right: 12%;
+  margin-bottom: 20px;
+}
+
 .image-holder {
   text-align: center;
   height: 100%;
