--- a/pages/talktalk/tt-style.css
+++ b/pages/talktalk/tt-style.css
@@ -105,7 +105,7 @@ h1 {
 
 .work-title {
   font-family: 'Quicksand', sans-serif;
-  color: #CD0000;
+  color: #7e3b94;
   font-size: 22px;
   margin-left: 12%;
   margin-right: 12%;
@@ -122,7 +122,7 @@ h1 {
 
 .work-title-right {
   font-family: 'Quicksand', sans-serif;
-  color: #CD0000;
+  color: #7e3b94;
   font-size: 22px;
   margin-left: 35%;
   margin-right: 12%;
