black background and logo added

--- a/pages/jlr/jlr-style.css
+++ b/pages/jlr/jlr-style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-color: #fff;
+  background-color: #000;
 }
 
 a {
@@ -9,12 +9,12 @@ a {
 
 /* unvisited link */
 a:link {
-  color: #CD0000;
+  color: #fff;
 }
 
 /* visited link */
 a:visited {
-  color: #CD0000;
+  color: #fff;
 }
 
 /* mouse over link */
@@ -24,12 +24,12 @@ a:hover {
 
 /* selected link */
 a:active {
-  color: #CD0000;
+  color: #fff;
 }
 
 p {
   font-family: 'Quicksand', sans-serif;
-  color: #484e50;
+  color: #fff;
   font-size: 12px;
   letter-spacing: 1px;
   margin: 0px;
@@ -37,7 +37,7 @@ p {
 
 .dot {
   font-family: 'Quicksand', sans-serif;
-  color: #CD0000;
+  color: #fff;
   font-size: 30px;
   letter-spacing: 1px;
 }
@@ -67,6 +67,7 @@ h1 {
 .logo-text {
   font-size: 34px;
   font-family: 'Quicksand', sans-serif;
+  color: #fff;
 }
 
 .close-button {
@@ -79,7 +80,7 @@ h1 {
 .senior {
   font-size: 14px;
   font-family: 'Quicksand', sans-serif;
-  color: grey;
+  color: #fff;
 }
 
 .footer {
@@ -104,7 +105,7 @@ h1 {
 
 .work-title {
   font-family: 'Quicksand', sans-serif;
-  color: #CD0000;
+  color: #fff;
   font-size: 22px;
   margin-left: 12%;
   margin-right: 12%;
@@ -116,7 +117,15 @@ h1 {
   text-align: center;
 }
 
+.image-holder-logo {
+  margin-top: 40px;
+  text-align: center;
+  width: 50%;
+  margin: 0 auto;
+}
+
 .image {
+  margin: 0 auto;
   max-width: 80%;
   max-height: 80%;
 }
