--- a/pages/alchemy/alchemy-style.css
+++ b/pages/alchemy/alchemy-style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-color: #000;
+  background-color: #009f65;
 }
 
 a {
@@ -115,7 +115,7 @@ h1 {
 }
 
 .image-holder {
-  margin-top: 40px;
+  margin-top: 0px;
   text-align: center;
 }
 
@@ -128,8 +128,8 @@ h1 {
 
 .image {
   margin: 0 auto;
-  max-width: 80%;
-  max-height: 80%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 @media screen and (max-width: 699px) and (min-width: 320px) {
